crates/vize_patina/tests/snapshots/static_class_fix__long-binding.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "long-binding",
        entry: "template",
        source: "<div v-bind:class=\"'static-class'\"></div>",
        fixed: "<div class=\"static-class\"></div>",
        diagnostics: 1,
        edit_start: Some(
            5,
        ),
        edit_end: Some(
            34,
        ),
        diagnostic_start: Some(
            12,
        ),
        diagnostic_end: Some(
            34,
        ),
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 12,
                end: 34,
                help: None,
                labels: [],
                fix: Some(
                    Fix {
                        message: "Replace with static class attribute",
                        edits: [
                            TextEdit {
                                start: 5,
                                end: 34,
                                new_text: "class=\"static-class\"",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
)
