crates/vize_patina/tests/snapshots/static_class_fix__short-binding.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "short-binding",
        entry: "template",
        source: "<div :class=\"'static-class'\"></div>",
        fixed: "<div class=\"static-class\"></div>",
        diagnostics: 1,
        edit_start: Some(
            5,
        ),
        edit_end: Some(
            28,
        ),
        diagnostic_start: Some(
            6,
        ),
        diagnostic_end: Some(
            28,
        ),
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 6,
                end: 28,
                help: None,
                labels: [],
                fix: Some(
                    Fix {
                        message: "Replace with static class attribute",
                        edits: [
                            TextEdit {
                                start: 5,
                                end: 28,
                                new_text: "class=\"static-class\"",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
)
