crates/vize_patina/tests/snapshots/static_class_fix__utf8-crlf-sfc.snap
---
source: crates/vize_patina/tests/static_class_fix.rs
expression: "(&case, &initial, &result)"
---
(
    Case {
        id: "utf8-crlf-sfc",
        entry: "sfc",
        source: "<template>\r\n<p>雪🌸</p><div :class=\"'static-class'\"></div>\r\n</template>\r\n",
        fixed: "<template>\r\n<p>雪🌸</p><div class=\"static-class\"></div>\r\n</template>\r\n",
        diagnostics: 1,
        edit_start: Some(
            31,
        ),
        edit_end: Some(
            54,
        ),
        diagnostic_start: Some(
            32,
        ),
        diagnostic_end: Some(
            54,
        ),
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "vapor/prefer-static-class",
                severity: Warning,
                message: "Prefer static class attribute over dynamic :class binding for constant values",
                start: 32,
                end: 54,
                help: None,
                labels: [],
                fix: Some(
                    Fix {
                        message: "Replace with static class attribute",
                        edits: [
                            TextEdit {
                                start: 31,
                                end: 54,
                                new_text: "class=\"static-class\"",
                            },
                        ],
                    },
                ),
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    LintResult {
        filename: "StaticClass.vue",
        diagnostics: [],
        error_count: 0,
        warning_count: 0,
    },
)
